<resources>
    <string name="app_name">克立司帝</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="menu">菜单</string>
    <string name="menjin">一卡通</string>
    <string name="fangke">消息</string>
    <string name="park">菜单</string>
    <string name="me">个人中心</string>
    <string name="qrcode">二维码开门</string>
    <string name="bluetooth">蓝牙开门</string>
    <string name="back">返回</string>
    <string name="accessdata">门禁数据查询</string>
    <string name="visitor">访客邀请</string>
    <string name="inviterecord">邀请记录查询</string>
    <string name="visitrecord">来访记录查询</string>
    <string name="apply">车位预约</string>
    <string name="moon">月卡缴费</string>
    <string name="tem">临时缴费</string>
    <string name="lock">车辆锁定</string>
    <string name="pay">缴费记录查询</string>
    <string name="person">个人资料</string>
    <string name="card">卡片</string>
    <string name="license">个人车牌</string>
    <string name="addlicense">添加车牌</string>
    <string name="plateno">车牌号</string>
    <string name="model">型号</string>
    <string name="color">颜色</string>
    <string name="idtxthint">登录</string>
    <string name="pwdtxthint">密码</string>
    <string name="xiaoxi">消息</string>
    <string name="huiyi">会议</string>
    <string name="settings">设置</string>
    <string name="pwdmodify">密码重置</string>
    <string name="register">确认注册</string>
    <string name="mobile">手机号</string>
    <string name="pleasemob">请输入手机号</string>
    <string name="newpwd">新密码</string>
    <string name="repeatpwd">重复密码</string>
    <string name="code">验证码</string>
    <string name="next">下一步</string>
    <string name="shenqing">您还未添加该功能，请先申请</string>
    <string name="remind">正在审核中，请耐心等待。。。。</string>
    <string name="now">现在申请</string>
    <string name="no">算了，下次再说</string>
    <string name="no1">返回前一页</string>
    <string name="username">用户名</string>
    <string name="address">住址</string>
    <string name="gender">性别</string>
    <string name="add">添加</string>
    <string name="submit">提 交</string>
    <string name="fmobile">联系电话</string>
    <string name="vali">身份验证</string>
    <string name="huzhu">户主姓名</string>
    <string name="sfz">户主身份证号</string>
    <string name="guanxi">与户主关系</string>
    <string name="xiaoqu">小区</string>
    <string name="wuye">物业公司</string>

    <string name="list_item_left_button">设置</string>
    <string name="list_item_right_button">详情</string>
    <string name="chaxun">查询</string>
    <string name="action_about">About</string>
    <string name="dialog_message">Created by Yasin Yildirim - 2014</string>
    <string name="dialog_ok">OK</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <string name="d">图片描述</string>
    <string name="confirm">安全验证</string>
    <string name="confirms">验证</string>
    <string name="mobmodify">更改手机号</string>
    <string name="xiaci">下次再说</string>
    <string name="wangji">忘记密码？</string>
    <string name="meiyou">还没有账号？</string>
    <string name="shuaxin">把二维码放在摄像头前面，识别成功后开门进入，二维码有效期24h</string>
    <string name="fee">本次停车费用：</string>
    <string name="zhifu">立即支付</string>
    <string name="alipay">支付宝</string>
    <string name="weixin">微信支付</string>
    <string name="yypz">预约凭证二维码</string>
    <string name="tdmj">通道或门禁权限二维码</string>
    <string name="cxsf">距离重新收费还有：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plate">PlateActivity</string>
</resources>
