<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.christie.activity.notme.ApplyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_shenqing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shenqing"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_now"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/now"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/no"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
