<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.christie.fragment.TempayFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fee"
        android:gravity="center"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_jine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="20.00"
        android:textSize="60sp"
        android:textColor="@color/bottom_button_text_black"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/rb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rb_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alipay"
            android:textSize="20sp"
            android:drawableRight="@drawable/alipay"
            android:padding="5dp"
            android:checked="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weixin"
            android:textSize="20sp"
            android:drawableRight="@drawable/weixin"
            android:padding="5dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_zhifu"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/zhifu"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
