<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.christie.activity.PersonalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_yhm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/bottom_button_text_black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/my_mine_next"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:id="@+id/ll_sjh"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/bottom_button_text_black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/my_mine_next"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/bottom_button_text_black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:id="@+id/ll_xb"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/bottom_button_text_black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/my_mine_next"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>
</LinearLayout>
