<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.christie.activity.ConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_code_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/code"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:theme="@style/MyEditText"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:digits="1234567890"
            android:maxLength="6"/>

        <com.example.administrator.christie.view.CountdownButton
            android:id="@+id/btn_code_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/login_button_nor"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/confirms"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
