<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.christie.activity.notme.VisitorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_yypz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:src="@drawable/yypz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yypz"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/bottom_button_text_black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BEBEBE"/>

    <LinearLayout
        android:id="@+id/ll_tdmj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:src="@drawable/tdmj" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tdmj"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/bottom_button_text_black"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BEBEBE"/>
</LinearLayout>
